[package]
name = "netstat"
version = "0.6.0"
authors = ["ivxvm <ivxvm@protonmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ivxvm/netstat-rs"
documentation = "https://docs.rs/netstat"
categories = ["network-programming", "os"]
keywords = ["network", "socket"]
description = """
Cross-platform library to retrieve network sockets information.
"""

[dependencies]
libc = "0.2"
bitflags = "1.0"
